fix: Filter pop-up overlaps the Notification Window

--- a/frappe/public/scss/desk/filters.scss
+++ b/frappe/public/scss/desk/filters.scss
@@ -8,6 +8,7 @@
 	min-width: 500px;
 	min-height: 50px;
 	font-size: var(--text-md);
+	z-index: 1019;
 }
 
 .filter-area {
@@ -29,7 +30,7 @@
 				margin-bottom: 0;
 			}
 		}
-		
+
 		.awesomplete {
 			ul[role="listbox"] {
 				min-width: 100%;
